k8s/ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  name: memories-ingress

spec:

  ingressClassName: nginx

  rules:

  - host: memories.local

    http:

      paths:

      - path: /

        pathType: Prefix

        backend:

          service:

            name: frontend-service

            port:

              number: 80


      - path: /posts

        pathType: Prefix

        backend:

          service:

            name: backend-service

            port:

              number: 5000
