k8s/network-policy.yaml
apiVersion: networking.k8s.io/v1

kind: NetworkPolicy

metadata:
  name: memories-network-policy

spec:

  podSelector: {}

  policyTypes:
  - Ingress

  ingress:
  - from:
  
      - podSelector:
          matchLabels:
            app: memories-frontend

      - podSelector:
          matchLabels:
            app: memories-backend
